Fixed tooltip description not showing.

--- a/docroot/themes/custom/civic/civic-library/components/02-molecules/tooltip/tooltip.scss
+++ b/docroot/themes/custom/civic/civic-library/components/02-molecules/tooltip/tooltip.scss
@@ -28,7 +28,6 @@
 
     @include civic-typography('tag');
 
-    display: none;
     border-radius: $civic-border-radius;
     box-shadow: 0 rem(4px) rem(8px) rgba(0, 0, 0, 16%);
     box-sizing: border-box;
